[package]
authors = ["blacknon <blacknon@orebibou.com>"]
description = "A modern alternative to the watch command, records the differences in execution results and can check this differences at after."
edition = "2021"
keywords = ["watch", "command", "monitoring"]
license-file = "LICENSE"
name = "hwatch"
repository = "https://github.com/blacknon/hwatch"
version = "0.3.18"

[dependencies]
ansi-parser = "0.9.0"
ansi_term = "0.12.1"
async-std = {version = "1.12"}
chardetng = "0.1.17"
chrono = "0.4.34"
clap = {version = "4.5.3", features = ["cargo"]}
config = {version = "0.14", default-features = false, features = ["ini"]}
crossbeam-channel = "0.5.12"
crossterm = "0.28.1"
ctrlc = {version = "3.4.2", features = ["termination"]}
encoding_rs = "0.8"
error-stack = "0.4.1"
flate2 = "1.0.19"
futures = "0.3.30"
heapless = "0.8.0"
nix = {version = "0.29", features = ["fs", "term", "process", "signal"]}
question = "0.2.2"
ratatui = {version = "0.28.0", default-features = false, features = ['crossterm', 'unstable-rendered-line-info']}
rayon = "1.10"
regex = "1.10.3"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"
shell-words = "1.1.0"
similar = {version = "2.5.0", features = ["serde", "unicode", "text", "inline", "bytes"]}
termwiz = "0.22.0"
tokio = {version = "1.16", features = ["full"]}
unicode-segmentation = "1.10"
unicode-truncate = "1"
unicode-width = "=0.1.13"

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
termios = "0.3"

[package.metadata.binstall]
bin-dir = "bin/{ bin }{ binary-ext }"
pkg-url = "{ repo }/releases/download/{ version }/{ name }-{ version }.{ target }.{ archive-format }"
