[package]
authors = ["blacknon <blacknon@orebibou.com>"]
description = "A modern alternative to the watch command, records the differences in execution results and can check this differences at after."
edition = "2021"
keywords = ["watch", "command", "monitoring"]
license-file = "LICENSE"
name = "hwatch"
repository = "https://github.com/blacknon/hwatch"
version = "0.4.2"

[workspace]
members = ["crates/ansi", "crates/diffmode"]

[workspace.dependencies]
ansi_term = "0.12.1"
ratatui = { version = "0.30.0", default-features = false, features = [
    "crossterm",
    "unstable-rendered-line-info",
] }
serde = { version = "1.0.228", features = ["derive"] }
similar = { version = "2.7.0", features = [
    "serde",
    "unicode",
    "text",
    "inline",
    "bytes",
] }
tempfile = "3.27.0"
termwiz = "0.23.3"

[dependencies]
chardetng = "0.1.17"
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["cargo", "derive"] }
config = { version = "0.15.22", default-features = false, features = ["ini"] }
crossbeam-channel = "0.5.15"
crossterm = "0.29.0"
ctrlc = { version = "3.5.2", features = ["termination"] }
encoding_rs = "0.8"
flate2 = "1.1.9"
nix = { version = "0.29", features = ["fs", "term", "process", "signal"] }
ratatui.workspace = true
rayon = "1.10"
regex = "1.12.3"
serde.workspace = true
serde_json = "1.0.149"
shell-words = "1.1.1"
similar.workspace = true
unicode-segmentation = "1.12.0"
unicode-width = "0.2.2"
ansi_term.workspace = true
libloading = "0.8.9"
hwatch-diffmode = { path = "crates/diffmode", version = "0.4.2" }
hwatch-ansi = { path = "crates/ansi", version = "0.4.2" }
tempfile.workspace = true

[dev-dependencies]
assert_cmd = "2.2.1"
predicates = "3.1.4"
proptest = "1.11.0"

[[bin]]
bench = false
path = "crates/core/main.rs"
name = "hwatch"

[package.metadata.binstall]
bin-dir = "bin/{ bin }{ binary-ext }"
pkg-url = "{ repo }/releases/download/{ version }/{ name }-{ version }.{ target }.{ archive-format }"
