[package]
name = "hwatch-ansi"
version = "0.4.1"
edition = "2021"
authors = ["blacknon <blacknon@orebibou.com>"]
description = "ANSI handling utilities for hwatch."
license = "MIT"
repository = "https://github.com/blacknon/hwatch"
readme = "README.md"
keywords = ["ansi", "terminal", "tui", "hwatch"]

[dependencies]
ansi-parser = "0.9.0"
termwiz = "0.23.3"
ratatui = { version = "0.30.0", default-features = false, features = [
    'crossterm',
    'unstable-rendered-line-info',
] }
heapless = "0.8.0"
