[package]
name = "hwatch-ansi"
version = "0.4.2"
edition = "2021"
authors = ["blacknon <blacknon@orebibou.com>"]
description = "ANSI handling utilities for hwatch."
license = "MIT"
repository = "https://github.com/blacknon/hwatch"
readme = "README.md"
keywords = ["ansi", "terminal", "tui", "hwatch"]

[dependencies]
termwiz.workspace = true
ratatui.workspace = true
