[package]
name = "hwatch-diffmode"
version = "0.4.0"
edition = "2021"
authors = ["blacknon <blacknon@orebibou.com>"]
description = "Diff rendering utilities for hwatch."
license = "MIT"
repository = "https://github.com/blacknon/hwatch"
readme = "README.md"
keywords = ["diff", "terminal", "tui", "hwatch"]

[dependencies]
ratatui = { version = "0.30.0", default-features = false, features = [
    'crossterm',
    'unstable-rendered-line-info',
] }
ansi_term = "0.12.1"
