[package]
name = "hwatch-diffmode"
version = "0.4.1"
edition = "2021"
authors = ["blacknon <blacknon@orebibou.com>"]
description = "Diff rendering utilities for hwatch."
license = "MIT"
repository = "https://github.com/blacknon/hwatch"
readme = "README.md"
keywords = ["diff", "terminal", "tui", "hwatch"]

[dependencies]
ratatui.workspace = true
ansi_term.workspace = true
